fixed github link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>                    
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
-              <dd><a href="https://github.com/jquintero-02">Github</a></dd>
+              <dd><a href="https://github.com/jacobquintero">Github</a></dd>
               <dd><a href="https://www.linkedin.com/in/jacob-quintero-53b66b139/">LinkedIn</a></dd>
             </div>                        
             <!-- Publications -->
