fixed position of links

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <dd><a href="https://appliedmath.arizona.edu/">Applied Mathematics Program</a></dd>                
                 University of Arizona<br>
                 Tucson, AZ<br>
+                <p></p>
+                <a href="https://github.com/jacobquintero">Github</a>
+                <p><a href="https://www.linkedin.com/in/jacob-quintero-53b66b139/">LinkedIn</a></p>
             </div>                    
         </div>
         
