--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <!--
     Plain-Academic by Vasilios Mavroudis
     Released under the Simplified BSD License/FreeBSD (2-clause) License.
@@ -58,6 +58,7 @@
                 <p></p>
                 <a href="https://github.com/jacobquintero">Github</a>
                 <p><a href="https://www.linkedin.com/in/jacob-quintero-53b66b139/">LinkedIn</a></p>
+		<p><a href="mailto:jacobquintero@arizona.edu">Email: jacobquintero@arizona.edu</a></p>
             </div>                    
         </div>
         
